--- a/.github/workflows/mfem-jit.yml
+++ b/.github/workflows/mfem-jit.yml
@@ -25,9 +25,10 @@ on:
 env:
   HYPRE_VER: 2.29.0
   METIS_VER: 5.1.0
+  LD_LIBRARY_PATH:
 
 jobs:
-  MFEM-JIT-Tests:
+  Just-In-Time-Tests:
     strategy:
       matrix:
         os: [ubuntu-latest] #, macos-latest]
@@ -110,7 +111,7 @@ jobs:
         make install -j3
 
     # #########################################################################
-    - name: METIS, HYPRE install directory (par)
+    - name: METIS, HYPRE install and set LD_LIBRARY_PATH (par)
       if: matrix.build-system == 'make' && matrix.mpi == 'par'
       run: |
         metis_dir="$(pwd)/metis-5.0"
@@ -119,6 +120,7 @@ jobs:
         echo "HYPRE_DIR=${hypre_dir}" >> "$GITHUB_ENV"
         echo "METIS_DIR_OPT=METIS_DIR=${metis_dir}" >> "$GITHUB_ENV"
         echo "HYPRE_DIR_OPT=HYPRE_DIR=${hypre_dir}" >> "$GITHUB_ENV"
+        echo "LD_LIBRARY_PATH=${metis_dir}/lib:${hypre_dir}/install/lib" >> "$GITHUB_ENV"
 
     # #########################################################################
     - name: METIS, HYPRE install directory (seq)
@@ -169,10 +171,6 @@ jobs:
     - name: MFEM JIT sequential tests
       if: matrix.build-system == 'make' && matrix.mpi == 'seq'
       working-directory: mfem/examples
-      # 1. will create the JIT cache: archive + shared
-      # 2. will re-use the caches
-      # 3. remove the JIT shared lib, but keep the archive
-      # 4. will re-build the shared from archive
       run: |
         echo -e "\033[33m--- Compiling ex1\033[m"
         make ex1
@@ -187,9 +185,6 @@ jobs:
 
     # #########################################################################
     # JIT parallel tests
-    # MFEM_JIT_FORK forces the root MPI to fork before initialization
-    # and use the child process to do the std::system calls
-    # #########################################################################
     - name: MFEM JIT parallel tests
       working-directory: mfem/examples
       if: matrix.build-system == 'make' && matrix.mpi == 'par'
