--- a/.github/workflows/mfem-jit.yml
+++ b/.github/workflows/mfem-jit.yml
@@ -115,7 +115,9 @@ jobs:
         echo "HYPRE_DIR=unused" >> "$GITHUB_ENV"
 
     # #########################################################################
-    # MFEM debug and gcc on ubuntu warns about multiple maybe-uninitialized variables
+    # MFEM debug (-pedantic -Wall -Werror) and g++ on ubuntu warns about multiple
+    # maybe-uninitialized variables. The 'no-maybe-uninitialized' option should
+    # be removed when resolved.
     - name: MFEM Checkout
       uses: actions/checkout@v3
       with:
@@ -151,7 +153,22 @@ jobs:
       run: make install
 
     # #########################################################################
-    - name: MFEM JIT sequential tests
+    - name: MFEM JIT sequential unit tests
+      if: matrix.build-system == 'make' && matrix.mpi == 'seq'
+      working-directory: mfem/tests/unit
+      run: |
+        echo -e "\033[33m--- Compiling mjit_tests, sedov_tests, tmop_pa_tests\033[m"
+        make mjit_tests sedov_tests_cpu sedov_tests_debug tmop_pa_tests_cpu tmop_pa_tests_debug -j3
+        ./sedov_tests_debug --verbose
+        ./sedov_tests_cpu --verbose
+        echo -e "\033[33m--- Removing the JIT shared library, but keeping the archive one\033[m"
+        rm libmjit.[^a]*
+        ./sedov_tests_cpu --verbose
+        ./tmop_pa_tests_debug --verbose
+        ./tmop_pa_tests_cpu --verbose
+
+    # #########################################################################
+    - name: MFEM JIT sequential examples tests
       if: matrix.build-system == 'make' && matrix.mpi == 'seq'
       working-directory: mfem/examples
       run: |
@@ -167,7 +184,22 @@ jobs:
         MFEM_JIT_DEBUG=1 ./ex1 -pa -no-vis | (head -n 16 ; tail -n 2)
 
     # #########################################################################
-    - name: MFEM JIT parallel tests
+    - name: MFEM JIT parallel unit tests
+      if: matrix.build-system == 'make' && matrix.mpi == 'par'
+      working-directory: mfem/tests/unit
+      run: |
+        echo -e "\033[33m--- Compiling pmjit_tests, psedov_tests, ptmop_pa_tests\033[m"
+        make pmjit_tests psedov_tests_cpu psedov_tests_debug ptmop_pa_tests_cpu ptmop_pa_tests_debug -j3
+        mpirun -np 3 ./psedov_tests_debug --verbose
+        mpirun -np 3 ./psedov_tests_cpu --verbose
+        echo -e "\033[33m--- Removing the JIT shared library, but keeping the archive one\033[m"
+        rm libmjit.[^a]*
+        mpirun -np 3 ./psedov_tests_cpu --verbose
+        mpirun -np 3 ./ptmop_pa_tests_debug --verbose
+        mpirun -np 3 ./ptmop_pa_tests_cpu --verbose
+
+    # #########################################################################
+    - name: MFEM JIT parallel examples tests
       working-directory: mfem/examples
       if: matrix.build-system == 'make' && matrix.mpi == 'par'
       run: |
