--- a/.github/workflows/mfem-jit.yml
+++ b/.github/workflows/mfem-jit.yml
@@ -97,7 +97,7 @@ jobs:
         make install -j3
 
     # #########################################################################
-    - name: Set METIS_DIR, HYPRE_DIR and LD_LIBRARY_PATH (par)
+    - name: Set METIS_DIR, HYPRE_DIR and DY/LD_LIBRARY_PATH (par)
       if: matrix.mpi == 'par'
       run: |
         metis_dir="$(pwd)/metis-5.0"
@@ -107,6 +107,7 @@ jobs:
         echo "METIS_DIR_OPT=METIS_DIR=${metis_dir}" >> "$GITHUB_ENV"
         echo "HYPRE_DIR_OPT=HYPRE_DIR=${hypre_dir}" >> "$GITHUB_ENV"
         echo "LD_LIBRARY_PATH=${metis_dir}/lib:${hypre_dir}/lib" >> "$GITHUB_ENV"
+        echo "DYLD_LIBRARY_PATH=${metis_dir}/lib:${hypre_dir}/lib" >> "$GITHUB_ENV"
 
     - name: Set METIS_DIR and HYPRE_DIR (seq)
       if: matrix.build-system == 'make' && matrix.mpi == 'seq'
