--- a/.github/workflows/mfem-jit.yml
+++ b/.github/workflows/mfem-jit.yml
@@ -97,6 +97,9 @@ jobs:
         make install -j3
 
     # #########################################################################
+    # On MacOS, any dynamic linker (dyld) environment variables, such as DYLD_LIBRARY_PATH,
+    # are purged when launching protected processes. We need to set DYLD_LIBRARY_SET
+    # that has to be set in the right process
     - name: Set METIS_DIR, HYPRE_DIR and DY/LD_LIBRARY_PATH (par)
       if: matrix.mpi == 'par'
       run: |
@@ -107,7 +110,7 @@ jobs:
         echo "METIS_DIR_OPT=METIS_DIR=${metis_dir}" >> "$GITHUB_ENV"
         echo "HYPRE_DIR_OPT=HYPRE_DIR=${hypre_dir}" >> "$GITHUB_ENV"
         echo "LD_LIBRARY_PATH=${metis_dir}/lib:${hypre_dir}/lib" >> "$GITHUB_ENV"
-        echo "DYLD_LIBRARY_PATH=${metis_dir}/lib:${hypre_dir}/lib" >> "$GITHUB_ENV"
+        echo "DYLD_LIBRARY_SET=DYLD_LIBRARY_PATH=${metis_dir}/lib:${hypre_dir}/lib" >> "$GITHUB_ENV"
 
     - name: Set METIS_DIR and HYPRE_DIR (seq)
       if: matrix.build-system == 'make' && matrix.mpi == 'seq'
@@ -201,10 +204,11 @@ jobs:
       working-directory: mfem/examples
       if: matrix.build-system == 'make' && matrix.mpi == 'par'
       run: |
+        ${{DYLD_LIBRARY_SET}}
         echo -e "\033[33m--- Compiling ex1p\033[m"
         make ex1p
         echo -e "\033[33m--- First run will create the JIT cache: archive + shared\033[m"
-        DYLD_LIBRARY_PATH=${{ env.METIS_DIR }}/lib:${{ env.HYPRE_DIR }}/lib mpirun -np 3 ./ex1p -pa -no-vis | (head -n 16 ; tail -n 2)
+        mpirun -np 3 ./ex1p -pa -no-vis | (head -n 16 ; tail -n 2)
         echo -e "\033[33m--- Second run will re-use the caches\033[m"
         mpirun -np 3 ./ex1p -pa -no-vis | (head -n 16 ; tail -n 2)
         echo -e "\033[33m--- Removing the JIT shared library, but keeping the archive one\033[m"
