--- a/.github/workflows/mfem-jit.yml
+++ b/.github/workflows/mfem-jit.yml
@@ -30,10 +30,10 @@ jobs:
   Just-In-Time-Tests:
     strategy:
       matrix:
-        os: [macos-latest] #ubuntu-latest]
-        build-system: [make] #, cmake]
+        os: [ubuntu-latest] #, macos-latest]
+        build-system: [cmake] #, make]
         target: [opt] #, dbg]
-        mpi: [par] #seq]
+        mpi: [seq] #, par]
     name: ${{ matrix.os }}-${{ matrix.build-system }}-JIT-${{ matrix.target }}-${{ matrix.mpi }}
 
     runs-on: ${{ matrix.os }}
@@ -151,6 +151,17 @@ jobs:
           ${{ env.METIS_DIR_OPT }}
           ${{ env.HYPRE_DIR_OPT }}
 
+    - name: MFEM config and build (cmake)
+      if: matrix.build-system == 'cmake'
+      working-directory: mfem
+      run: |
+        mkdir build && cd build
+        cmake .. -DMFEM_USE_JIT=YES
+                 -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_VERBOSE_MAKEFILE=1
+                 -DCMAKE_CXX_FLAGS_RELWITHDEBINFO="-O1 -g -DNDEBUG"
+                 -DMFEM_ENABLE_TESTING=YES -DMFEM_ENABLE_EXAMPLES=NO -DMFEM_ENABLE_MINIAPPS=NO
+                 -DCMAKE_INSTALL_PREFIX=install -DCMAKE_INSTALL_MESSAGE=LAZY
+
     - name: MFEM info (make)
       if: matrix.build-system == 'make'
       working-directory: mfem
@@ -161,10 +172,23 @@ jobs:
       working-directory: mfem
       run: make install
 
+    - name: Set BUILD_DIR (make)
+      if: matrix.build-system == 'make'
+      run: |
+        echo "BUILD_DIR=." >> "$GITHUB_ENV"
+
+    - name: Set BUILD_DIR (cmake)
+      if: matrix.build-system == 'cmake'
+      run: |
+        echo "BUILD_DIR=build" >> "$GITHUB_ENV"
+
+    - name: Get working directory
+      run: env | grep BUILD_DIR
+
     # #########################################################################
     - name: MFEM JIT sequential unit tests
       if: matrix.build-system == 'make' && matrix.mpi == 'seq'
-      working-directory: mfem/tests/unit
+      working-directory: mfem/${{BUILD_DIR}}/tests/unit
       run: |
         echo -e "\033[33m--- Compiling mjit_tests, sedov_tests, tmop_pa_tests\033[m"
         make mjit_tests sedov_tests_cpu sedov_tests_debug tmop_pa_tests_cpu tmop_pa_tests_debug -j3
